--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>Responsive Web Design</h1>
+            <h1 class="mainhead">Responsive Web Design</h1>
             <nav>
                 <label class="hamburger" for="menuchecker">
                     <span></span>
