--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <header>
             <h1 class="mainhead">Responsive Web Design</h1>
-            <nav>
+            <nav class="clearfix">
                 <label class="hamburger" for="menuchecker">
                     <span></span>
                     <span></span>
